# R-Type

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  commit-norme.js  commitlint.config.mjs  contributing.md  test.cpp
client/: CMakeLists.txt
client/include/: Click.hpp  Client.hpp  EntityManager.hpp  InputClient.hpp  Protocol.hpp
client/include/health/: BossLifeBar.hpp  LifeBar.hpp
client/include/menu/: LoseMenu.hpp  Menu.hpp  OptionMenu.hpp  WinMenu.hpp
client/include/protocol/: NetworkClient.hpp  Protocol.hpp
client/include/socket/: Singleton.hpp  Socket.hpp  TcpSocket.hpp  UdpSocket.hpp
client/include/util/: Config.hpp  Logger.hpp  getResponsiveValue.hpp
client/src/: Click.cpp  Client.cpp  EntityManager.cpp  InputClient.cpp  Protocol.cpp  main.cpp
client/src/health/: BossLifeBar.cpp  LifeBar.cpp
client/src/menu/: LifeBar.cpp  LoseMenu.cpp  Menu.cpp  OptionMenu.cpp  WinMenu.cpp
client/src/protocol/: NetworkClient.cpp  Protocol.cpp
client/src/socket/: Singleton.cpp  Socket.cpp  TcpSocket.cpp  UdpSocket.cpp
client/src/util/: Logger.cpp  getResponsiveValue.cpp
game_engine/: CMakeLists.txt  README.md
game_engine/include/: Entity.hpp  EntityManager.hpp  GameEngine.hpp  System.hpp
game_engine/include/components/: Animation.hpp  Bullet.hpp  Button.hpp  ButtonRect.hpp  Collider.hpp  Color.hpp  Components.hpp  Health.hpp  Input.hpp  Link.hpp  OptionButton.hpp  Position.hpp  Renderable.hpp  Rigidbody.hpp  Shape.hpp  Slider.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Velocity.hpp
game_engine/include/system/: ASystem.hpp  CollisionSystem.hpp  ISystem.hpp  InputSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp
game_engine/src/: Entity.cpp  EntityManager.cpp  GameEngine.cpp  System.cpp  main.cpp
game_engine/src/Systems/: ButtonSystem.cpp  LinkSystem.cpp  ShapeSystem.cpp  SpriteSystem.cpp  System.cpp  TextSystem.cpp  UpdateSystem.cpp
game_engine/src/components/: Animation.cpp  Bullet.cpp  Button.cpp  ButtonRect.cpp  Collider.cpp  Color.cpp  Health.cpp  Input.cpp  Link.cpp  OptionButton.cpp  Position.cpp  Renderable.cpp  Rigidbody.cpp  Shape.cpp  Slider.cpp  Sound.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Velocity.cpp
game_engine/src/system/: ASystem.cpp  CollisionSystem.cpp  InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
game_engine/src/systems/: ButtonSystem.cpp  ShapeSystem.cpp  SpriteSystem.cpp  System.cpp  TextSystem.cpp  UpdateSystem.cpp
network/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
network/doc/: Network_Protocol_Documentation.md  protocol.md
network/include/: Bullet.hpp  BulletType.hpp  Checkpoint.hpp  Config.hpp  Enemy.hpp  Health.hpp  Logger.hpp  Obstacle.hpp  ObstacleType.hpp  Player.hpp  Point.hpp  Protocol.hpp  Room.hpp  Server.hpp  SmartBuffer.hpp  TcpSocket.hpp  UdpSocket.hpp  World.hpp
network/maps/: map1.map
network/src/: Bullet.cpp  Checkpoint.cpp  Enemy.cpp  Health.cpp  Inventory.cpp  Logger.cpp  Obstacle.cpp  Player.cpp  Point.cpp  Protocol.cpp  Room.cpp  Server.cpp  SmartBuffer.cpp  TcpSocket.cpp  UdpSocket.cpp  World.cpp  main.cpp
server/: CMakeLists.txt
server/doc/: misc.md  network.md  protocol.md  smartbuffer.md
server/maps/: map1.map  map2.map  map3.map
server/src/: main.cpp
(+206 files in other folders)
